syntax = "proto3";

option csharp_namespace = "Tradie.Analyzer.Proto";

enum CriteriaKind {
  UNKNOWN = 0;
  MODIFIER = 1;
  LEAGUE = 2;
  CATEGORY = 3;
  SUBCATEGORY = 4;
  ITEM_TYPE = 5;
  UNIQUE = 6;
}

message Criteria {
  string id = 1;
  string name = 2;
  CriteriaKind kind = 3;
  
  oneof underlying {
    ModifierCriteria modifier = 10;
    string league = 11;
    string category = 12;
    string subcategory = 13;
    int32 itemTypeId = 14;
  }
}

message ModifierCriteria {
  int64 modifierHash = 1 [jstype=JS_STRING];
  int32 kind = 2;
}