syntax = "proto3";

import "Analysis/ModifierTypes.proto";
import "Indexer/Common.proto";

option csharp_namespace = "Tradie.Proto.Indexer";

service SearchService {
  rpc SearchGear(SearchRequest) returns(SearchResponse);
}

message SearchRequest {
  SearchQuery Query = 1;
}

message SearchResponse {
  repeated string Ids = 1;
}

message SearchQuery {
  repeated SearchGroup Groups = 1;
  SortOrder Sort = 2;
}

message SearchGroup {
  int32 GroupKind = 1;
  repeated AffixRange Ranges = 2; 
}

message SortOrder {
  int32 SortKind = 1;
  optional ModKey Modifier = 2;
}